--- a/centreon/www/Themes/Centreon-2/style.css
+++ b/centreon/www/Themes/Centreon-2/style.css
@@ -868,8 +868,18 @@ div.menuLeft {
 .cntn {
     display: inline-block;
 }
-.toggle_wrapper {
+
+.position_toggle_wrapper {
     position: absolute;
+    z-index: 100;
+}
+
+.footer_toggle_wrapper {
+    height:40px;
+}
+
+
+.toggle_wrapper {
     background-color: #fff;
     top: 5.4em;
     z-index: 1;
