--- a/centreon/www/Themes/Centreon-2/style.css
+++ b/centreon/www/Themes/Centreon-2/style.css
@@ -860,8 +860,10 @@ div.menuLeft {
 }
 
 .detail-chart-title {
+  text-align: left;
   background-color: #cfedf9;
   padding: 5px 0;
+  padding-left: 5px;
 }
 
 /* ------ START : info box -----*/
@@ -1527,6 +1529,10 @@ form label { margin-left: 3px; }
 
 .pull-left {
     float: left;
+}
+
+.pull-right {
+    float: right;
 }
 
 ul.no-deco-list {
