#MON-803 : add collapse on broker config's form

--- a/centreon/www/include/configuration/configCentreonBroker/style.css
+++ b/centreon/www/include/configuration/configCentreonBroker/style.css
@@ -7,12 +7,16 @@ span.v_required_star {
 /* collapse */
 .elem-toCollapse {
     display: none;
+    position: relative;
+}
+.elem-toCollapse .FormRowValue input {
+    position: relative;
 }
 .elem-header {
     cursor: pointer;
 }
-.elem-header:hover {
-
+.elem-header:hover td {
+    background: #e7e7e8 !important;
 }
 .elem-header td:first-child {
     position: relative;
