--- a/centreon/www/include/Administration/parameters/backup/formBackup.html
+++ b/centreon/www/include/Administration/parameters/backup/formBackup.html
@@ -16,8 +16,8 @@
         <tr class="list_one"><td class="FormRowField"><img class="helpTooltip" name="tip_backup_configuration_files">{$form.backup_configuration_files.label}</td><td class="FormRowValue">{$form.backup_configuration_files.html}</td></tr>
         <tr class="list_two"><td class="FormRowField"><img class="helpTooltip" name="tip_backup_database_centreon">{$form.backup_database_centreon.label}</td><td class="FormRowValue">{$form.backup_database_centreon.html}</td></tr>
         <tr class="list_one"><td class="FormRowField"><img class="helpTooltip" name="tip_backup_database_centreon_storage">{$form.backup_database_centreon_storage.label}</td><td class="FormRowValue">{$form.backup_database_centreon_storage.html}</td></tr>
-        <tr class="list_two"><td class="FormRowField"><img class="helpTooltip" name="tip_backup_backup_dir">{$form.backup_backup_dir.label}</td><td class="FormRowValue">{$form.backup_backup_dir.html}</td></tr>
-        <tr class="list_one"><td class="FormRowField"><img class="helpTooltip" name="tip_backup_tmp_dir">{$form.backup_tmp_dir.label}</td><td class="FormRowValue">{$form.backup_tmp_dir.html}</td></tr>
+        <tr class="list_two"><td class="FormRowField"><img class="helpTooltip" name="tip_backup_backup_directory">{$form.backup_backup_directory.label}</td><td class="FormRowValue">{$form.backup_backup_directory.html}</td></tr>
+        <tr class="list_one"><td class="FormRowField"><img class="helpTooltip" name="tip_backup_tmp_directory">{$form.backup_tmp_directory.label}</td><td class="FormRowValue">{$form.backup_tmp_directory.html}</td></tr>
         <tr class="list_two"><td class="FormRowField"><img class="helpTooltip" name="tip_backup_retention">{$form.backup_retention.label}</td><td class="FormRowValue">{$form.backup_retention.html} {t}days{/t}</td></tr>
         <tr class="list_lvl_1">
             <td class="ListColLvl1_name" colspan="2">
