--- a/centreon/www/Themes/Centreon-2/jquery-ui/jquery-ui-centreon.css
+++ b/centreon/www/Themes/Centreon-2/jquery-ui/jquery-ui-centreon.css
@@ -36,6 +36,9 @@ iframe {
 .styleTable TD.first, .styleTable TH.first { border-left-width: 0px !important; }
 
 .ui-tabs .ui-tabs-panel { display: block; border-width: 0; padding: 1em 0.4em; background: none; }
+.ui-tabs .ui-tabs-nav li a { float: left; padding: .4em 1em 0.4em .4em; text-decoration: none; background: #009fdf;}
+.ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a { cursor: text;  background: none; }
+
 
 .ui-button-text-icon-primary .ui-button-text, .ui-button-text-icons .ui-button-text { padding: .2em 1em .2em 2.1em; }
 #globalView {padding-bottom:10px;}
