Add drag and drog in performance view

--- a/centreon/www/Themes/Centreon-2/style.css
+++ b/centreon/www/Themes/Centreon-2/style.css
@@ -2117,6 +2117,7 @@ textarea.default-textarea {
   font-weight: bold;
   width: calc(100% - 4px);
   padding: 0 2px;
+  cursor: move;
 }
 
 .graph .title .actions {
