Add collapse to broker config's form

--- a/centreon/www/Themes/Centreon-2/style.css
+++ b/centreon/www/Themes/Centreon-2/style.css
@@ -1560,6 +1560,10 @@ ul.no-deco-list {
 }
 
 /* CLONE ELEMENT */
+.clone_template .FormRowField,
+.clone_template .FormRowValue {
+    width: 208px;
+}
 .clonable {
     list-style-type: none;
     margin: 0;
