* Improve style of "display graph" button

--- a/centreon/www/include/views/graphs/javascript/centreon-status-chart.css
+++ b/centreon/www/include/views/graphs/javascript/centreon-status-chart.css
@@ -18,5 +18,9 @@
 }
 
 .enable_chart {
-  display: none
+    position: absolute;
+    top: 48%;
+    left: 48%;
+    z-index: 10;
+    display: none;
 }
