--- a/centreon/www/include/Administration/parameters/knowledgeBase/formKnowledgeBase.html
+++ b/centreon/www/include/Administration/parameters/knowledgeBase/formKnowledgeBase.html
@@ -1,4 +1,5 @@
 {$form.javascript}
+<div id ="testConnection"><p id="msg-wrapper"></p></div>
 <form {$form.attributes}>
     <table class="formTable table">
         <tr class="ListHeader">
@@ -25,7 +26,10 @@
         </tr>
         <tr class="list_one">
             <td class="FormRowField"><img class="helpTooltip" name="tip_knowledge_database_host">&nbsp;{$form.kb_db_host.label}</td>
-            <td class="FormRowValue">{$form.kb_db_host.html}</td>
+            <td class="FormRowValue">
+                {$form.kb_db_host.html}
+                {if not $form.frozen}{$form.test_connection.html}{/if}
+            </td>
         </tr>
         <tr class="list_two">
             <td class="FormRowField"><img class="helpTooltip" name="tip_knowledge_database_prefix">&nbsp;{$form.kb_db_prefix.label}</td>
@@ -44,3 +48,40 @@
     {$form.hidden}
 </form>
 {$helptext}
+
+
+
+{literal}
+<script type="text/javascript">
+    function checkWikiConnection() {
+            jQuery.ajax({
+                type    :   "POST",
+                url     :   "./include/configuration/configKnowledge/check_wiki_connection.php",
+                data    :  {
+                    name: jQuery( "input[name='kb_db_name']" ).val(),
+                    user: jQuery( "input[name='kb_db_user']" ).val(),
+                    pwd:  jQuery( "input[name='kb_db_password']" ).val(),
+                    host: jQuery( "input[name='kb_db_host']" ).val()
+                            },
+                success :   function(data) {
+                    var result = eval('(' + data + ')');
+                    var classpopin =''
+                    var msg =''
+
+                    if(result.outcome == false ){
+                        msg = result.message;
+                        classpopin ='error';
+                    } else {
+                        msg = 'Connection successful';
+                        classpopin = 'success2';
+                    }
+                    var span = '<span class="msg-field '+classpopin+'">' + msg + '</span>';
+                    jQuery('#msg-wrapper').html(span);
+                    jQuery('#testConnection').centreonPopin("open");
+
+                }
+            });
+    }
+
+</script>
+{/literal}
