* #MON-1114 : Fix period key for pollers' graph

--- a/centreon/www/include/Administration/corePerformance/nagiosStats.html
+++ b/centreon/www/include/Administration/corePerformance/nagiosStats.html
@@ -53,8 +53,8 @@
 
 	var graphSettings = {
 		period : {
-			start: {/literal}{$startTime}{literal},
-			end: {/literal}{$endTime}{literal}
+			startTime: {/literal}{$startTime}{literal},
+			endTime: {/literal}{$endTime}{literal}
 		}
 	};
 
