fix left margin cross icon

--- a/centreon/www/Themes/Centreon-2/style.css
+++ b/centreon/www/Themes/Centreon-2/style.css
@@ -303,7 +303,7 @@ p.description a, p.description a:visited {
 }
 
 .clearAllSelect2 {
-     margin-right: 4px;
+     margin-left: 4px;
  }
 
 .clearAllSelect2 img {
