Better display in service detail with long output or long command
* Use word wrap for long output in service detail
* Add a scroll when a command argument is very long in service detail page

Ref: #4974 #4975

--- a/centreon/www/Themes/Centreon-2/style.css
+++ b/centreon/www/Themes/Centreon-2/style.css
@@ -118,6 +118,15 @@ label {
     vertical-align: middle;
 }
 
+
+pre.wrap {
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
 .margin_right {
     margin-right: 6px;
 }
