--- a/centreon/www/include/Administration/parameters/knowledgeBase/formKnowledgeBase.html
+++ b/centreon/www/include/Administration/parameters/knowledgeBase/formKnowledgeBase.html
@@ -57,39 +57,33 @@
 </form>
 {$helptext}
 
-
-
 {literal}
 <script type="text/javascript">
-    function checkWikiConnection() {
-            jQuery.ajax({
-                type    :   "POST",
-                url     :   "./include/common/webServices/rest/internal.php?object=centreon_wiki&action=checkConnection",
-                data    :  {
-                    name: jQuery( "input[name='kb_db_name']" ).val(),
-                    user: jQuery( "input[name='kb_db_user']" ).val(),
-                    pwd:  jQuery( "input[name='kb_db_password']" ).val(),
-                    host: jQuery( "input[name='kb_db_host']" ).val()
-                            },
-                success :   function(data) {
-                    var result = eval('(' + data + ')');
-                    var classpopin =''
-                    var msg =''
 
-                    if(result.outcome == false ){
-                        msg = result.message;
-                        classpopin ='error';
-                    } else {
-                        msg = 'Connection successful';
-                        classpopin = 'success2';
-                    }
-                    var span = '<span class="msg-field '+classpopin+'">' + msg + '</span>';
-                    jQuery('#msg-wrapper').html(span);
-                    jQuery('#testConnection').centreonPopin("open");
+function checkWikiConnection() {
+    jQuery.ajax({
+        type : "POST",
+        url : "./include/common/webServices/rest/internal.php?object=centreon_wiki&action=checkConnection",
+        data : JSON.stringify({
+            name: jQuery( "input[name='kb_db_name']" ).val(),
+            user: jQuery( "input[name='kb_db_user']" ).val(),
+            pwd:  jQuery( "input[name='kb_db_password']" ).val(),
+            host: jQuery( "input[name='kb_db_host']" ).val()
+        }),
+        success : function(data) {
+            var classpopin = 'success2';
+            var msg = data.message;
 
-                }
-            });
-    }
+            if (!data.outcome) {
+                classpopin ='error';
+            }
+
+            var span = '<span class="msg-field ' + classpopin + '">' + msg + '</span>';
+            jQuery('#msg-wrapper').html(span);
+            jQuery('#testConnection').centreonPopin("open");
+        }
+    });
+}
 
 </script>
 {/literal}
