--- a/centreon/www/include/views/graphs/graph-periods.html
+++ b/centreon/www/include/views/graphs/graph-periods.html
@@ -34,6 +34,7 @@
 </div>
 <script src="./include/common/javascript/moment-with-locales.js"></script>
 <script src="./include/common/javascript/moment-timezone-with-data.min.js"></script>
+<script src="./include/common/javascript/numeral.min.js"></script>
 <script src="./include/common/javascript/charts/d3.min.js"></script>
 <script src="./include/common/javascript/charts/c3.min.js"></script>
 <script src="./include/views/graphs/javascript/centreon-graph.js"></script>
