--- a/centreon/www/include/views/graphs/graphs.html
+++ b/centreon/www/include/views/graphs/graphs.html
@@ -193,6 +193,7 @@
 <script src="./include/common/javascript/moment-with-locales.js"></script>
 <script src="./include/common/javascript/moment-timezone-with-data.min.js"></script>
 <script src="./include/common/javascript/handlebars-v4.0.5.js"></script>
+<script src="./include/common/javascript/numeral.min.js"></script>
 <script src="./include/common/javascript/charts/d3.min.js"></script>
 <script src="./include/common/javascript/charts/c3.min.js"></script>
 <script src="./include/common/javascript/charts/d3-timeline.js"></script>
