Export the chart image when the chart view is split
Ref: #5121

--- a/centreon/www/include/views/graphs/graph-split.html
+++ b/centreon/www/include/views/graphs/graph-split.html
@@ -228,7 +228,7 @@ jQuery(function () {
     }
 
     e.preventDefault();
-    baseUrl += '?&index=' + svcId + '&start=' + start.unix() + '&end=' + end.unix() + '&metric=' + metricId;
+    baseUrl += '?&svcId=' + svcId + '&start=' + start.unix() + '&end=' + end.unix() + '&metric=' + metricId;
     window.location = baseUrl;
   });
 
