--- a/centreon/www/include/views/graphs/graphs.html
+++ b/centreon/www/include/views/graphs/graphs.html
@@ -207,12 +207,18 @@ var tooManyChartMsg = "{t}You cannot add more charts. The maximum charts is {/t}
   <div class="title">
     <img class="remove ico-18 margin_right" src="./img/icons/circle-cross.png">
     <span>{{graphTitle}}</span>
+    {/literal}
+    {if $topologyAccess.2040101 || $admin == 1}
     <a href="#" class="btc bt_info actions-simple" data-href="./main.php?p=2040101">
-      Split chart
+      {t}Split chart{/t}
     </a>
+    {/if}
+    {if $topologyAccess.2040102 || $admin == 1}
     <a href="#" class="btc bt_info actions-simple" data-href="./main.php?p=2040102">
-      Display multiple periods
+      {t}Display multiple periods{/t}
     </a>
+    {/if}
+    {literal}
     <a class="actions" href="#" data-href="./include/views/graphs/generateGraphs/generateImage.php">
       <img alt="Export graph" src="./img/icons/picture.png" class="ico-18 margin_right">
     </a>
